homeworks/yevgeniykos/module-03/lesson-08/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mod03-less08
