homeworks/yevgeniykos/module-03/lesson-08/redis-k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: mod03-less08
  labels:
    app: redis  
spec:
  containers:
    - name: redis
      image: redis:alpine
      resources:
        requests:
          cpu: "100m"  
          memory: "64Mi" 
        limits:
          cpu: "200m"  
          memory: "256Mi" 
      ports:
        - containerPort: 6379
      volumeMounts:
        - name: redis-data
          mountPath: /data
      readinessProbe:
        exec:
          command: ["redis-cli", "ping"]
        initialDelaySeconds: 5
        periodSeconds: 10
        timeoutSeconds: 5
        failureThreshold: 3
      livenessProbe:
        exec:
          command: ["redis-cli", "ping"]
        initialDelaySeconds: 20
        periodSeconds: 20
        timeoutSeconds: 5
  volumes:
    - name: redis-data
      persistentVolumeClaim:
        claimName: dbl-data-claim
