homeworks/yevgeniykos/module-03/lesson-08/course-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-deployment
  namespace: mod03-less08
  labels:
    app: course-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 30%  
  selector:
    matchLabels:
      app: course-app
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: rdlsolutions/course-app:2.0.0
          resources:
            requests:
              cpu: "100m"  
              memory: "64Mi" 
            limits:
              cpu: "200m"  
              memory: "512Mi" 
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
  namespace: mod03-less08
  labels:
    app: course-app
spec:
  type: ClusterIP
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - port: 80 
      targetPort: 8080 
      protocol: TCP
      name: course-app
