homeworks/yevgeniykos/module-03/lesson-08/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: mod03-less08
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
