homeworks/yevgeniykos/module-03/lesson-08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mod03-less08
  name: course-app-ingress
spec:
  rules:
  - host: "course-app.local" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: course-app-service 
            port:
              number: 80
